--- a/myHomeWork/Views/Acticle/Index.cshtml
+++ b/myHomeWork/Views/Acticle/Index.cshtml
@@ -16,15 +16,18 @@
                 <td style="width:10%">作者</td>
                 <td style="width:15%">建立時間</td>
                 <td style="width:15%">最後一次回應時間</td>
+                <td>修改</td>
             </tr>
             @foreach (var item in Model)
             {
-                <tr onclick="go_Reply('@item.ID','@Request["F_ID"]')">                        
-                    <td>@item.TITLE</td>                        
-                    <td>@item.BODY</td>                        
-                    <td>@item.AUTHOR</td>                        
-                    <td>@item.BUD_DTM</td>                        
-                    <td>@item.UPD_DTM</td>
+                <!--tr onclick="go_Reply('@item.ID','@Request["F_ID"]')"-->
+                <tr>
+                <td>@item.TITLE</td>
+                <td>@item.BODY</td>
+                <td>@item.AUTHOR</td>
+                <td>@item.BUD_DTM</td>
+                <td>@item.UPD_DTM</td>
+                <td><input type="button" value="修改" onclick="go_edit('@item.ID', '@Request["F_ID"]');"></td>
                 </tr>
             }
         </table>
@@ -38,5 +41,9 @@
 <script type="text/javascript">
     function go_Reply(str1,str2) {
         location.href = "/Reply/Index?F_ID=" + str1 + "&A_ID=" + str2;
+    }
+
+    function go_edit(str1, str2) {
+        location.href = "/Acticle/Edit?F_ID=" + str2  + "&A_ID=" + str1;
     }
 </script>
